<resources>
    <string name="app_name">StartTravel</string>

    <string name="splash_001">追寻自己的足迹</string>

    <string name="login_001">注册</string>
    <string name="login_002">邮箱</string>
    <string name="login_003">密码</string>
    <string name="login_004">确认密码</string>
    <string name="login_005">登录</string>
    <string name="login_006">跳过</string>

    <string name="sign_up_001">登录</string>
    <string name="sign_up_002">邮箱</string>
    <string name="sign_up_003">密码</string>
    <string name="sign_up_004">找回密码</string>
    <string name="sign_up_005">注册</string>
    <string name="sign_up_006">跳过</string>

    <string name="home_001">旅途</string>
    <string name="home_002">标记</string>
    <string name="home_003">足迹</string>
    <string name="home_004">我</string>
    <string name="home_005">旅途</string>
    <string name="home_006">记录花销</string>
    <string name="home_007">随心旅行</string>
    <string name="home_008">标记功能需要打开存储，电话状态和位置权限！</string>
    <string name="home_009">小心迷路！还是看看当下旅途的风景吧</string>


    <string name="map_001">查找地点</string>
    <string name="map_002">搜索</string>


    <string name="me_001">简介：</string>
    <string name="me_002">注册邮箱：</string>
    <string name="me_003">帮助</string>
    <string name="me_004">关于</string>
    <string name="me_005">退出登录</string>
    <string name="me_006">暂无介绍</string>

    <string name="history_001">日期</string>
    <string name="history_002">开始日</string>
    <string name="history_003">结束日</string>
    <string name="history_004">地点</string>
    <string name="history_005">城市</string>
    <string name="history_006">全世界</string>
    <string name="history_007">确认</string>
    <string name="history_008">选择地点</string>
    <string name="history_009">详细</string>
    <string name="history_010">人</string>
    <string name="history_011">元</string>

    <string name="travel_001">启程</string>
    <string name="travel_002">结束</string>
    <string name="travel_003">标语</string>
    <string name="travel_004">支出:￥</string>
    <string name="travel_005">同行者:</string>
    <string name="travel_006">人</string>
    <string name="travel_007">图片选择功能需要打开存储权限！</string>
    <string name="travel_008">结余:￥</string>

    <string name="add_travel_001">添加行程</string>
    <string name="add_travel_002">提交</string>
    <string name="add_travel_003">名称:</string>
    <string name="add_travel_004">简介:</string>
    <string name="add_travel_005">你的启动资金:</string>
    <string name="add_travel_006">模式:</string>
    <string name="add_travel_007">同伴:(%1$d人%2$s%3$s元)</string>
    <string name="add_travel_007_1">同伴:(%1$d人)</string>
    <string name="add_travel_008">添加</string>
    <string name="add_travel_009">编辑</string>
    <string name="add_travel_010">元</string>
    <string name="add_travel_011">请输入行程名称</string>
    <string name="add_travel_012">记录一下你的行程吧</string>
    <string name="add_travel_013">单人</string>
    <string name="add_travel_014">多人</string>
    <string name="add_travel_015">0</string>
    <string name="add_travel_e01">给这次旅行起个名字吧！</string>
    <string name="add_travel_e02">启动资金我们只接受人民币,拒绝假币！</string>
    <string name="add_travel_e03">你好像忘记你的伙伴了，没有伙伴的时候就让我们独自勇敢向前吧！</string>

    <string name="modify_travel_001">修改行程</string>

    <string name="travel_detail_001">添加</string>
    <string name="travel_detail_002">支出</string>
    <string name="travel_detail_003">汇入</string>
    <string name="travel_detail_004">概要</string>
    <string name="travel_detail_005">金额</string>
    <string name="travel_detail_006">支出:</string>
    <string name="travel_detail_007">汇入:</string>
    <string name="travel_detail_008">结余:</string>

    <string name="add_detail_001">是</string>
    <string name="add_detail_002">否</string>
    <string name="add_detail_003">总金额</string>
    <string name="add_detail_004">元</string>
    <string name="add_detail_005">支出</string>
    <string name="add_detail_006">汇入</string>
    <string name="add_detail_007">汇入人</string>
    <string name="add_detail_008">用途</string>
    <string name="add_detail_009">参与人员均分</string>
    <string name="add_detail_010">例：游乐园门票</string>
    <string name="add_detail_011">提交</string>
    <string name="add_detail_012">(还有%1$s元未分配)</string>
    <string name="add_detail_013">自己</string>
    <string name="add_detail_014">当前结余:</string>
    <string name="add_detail_E01"> 请合理分配金额给你的伙伴！</string>
    <string name="add_detail_E02"> 请选择汇入人！</string>
    <string name="add_detail_E03"> 请输入总金额！</string>
    <string name="add_detail_E04"> 请输入花销的用途！</string>
    <string name="add_detail_E05"> 明细添加失败，请重试！</string>
    <string name="add_detail_E06"> 明细添加成功！</string>
    <string name="add_detail_E07"> 钱包里的钱所剩无几了，拒绝赊账，先汇些钱吧！</string>
    <string name="add_detail_E08"> 太富有了，贫穷限制了本程序的想象，我承认我没能力存这么多钱！</string>

    <string name="time_line_001">yyyy年MM月dd日 HH:mm</string>
    <string name="time_line_002">未设定</string>
    <string name="time_line_003">空空如也</string>
    <string name="time_line_E01">请输入标记的名称！</string>

    <string name="add_step_001">添加标记</string>
    <string name="add_step_002">标记简称:</string>
    <string name="add_step_003">例:杜甫草堂</string>
    <string name="add_step_004">位置:</string>
    <string name="add_step_005">小记:</string>
    <string name="add_step_006">记录心中的旅程</string>
    <string name="add_step_007">确定</string>
    <string name="add_step_008">删除</string>
    <string name="add_step_009">编辑标记</string>
    <string name="add_step_010">位置选择</string>

    <string name="location_select_001">位置检索</string>
    <string name="location_select_002">确定</string>


    <string name="list_dialog_001">取消</string>

    <string name="member_info_dialog_001">伙伴信息</string>
    <string name="member_info_dialog_002">确认</string>
    <string name="member_info_dialog_003">姓名</string>
    <string name="member_info_dialog_004">金额</string>


    <string name="custom_switch_on">开</string>
    <string name="custom_switch_off">关</string>

    <string name="alert_button_text">关闭</string>
    <string name="loading_text">努力奔跑中...</string>

    <string name="money_label">￥%1$s</string>

    <string name="common_001">权限请求</string>
    <string name="data_format_1">yyyy年MM月dd日 HH:mm</string>
    <string name="data_format_2">yyyyMMddHHmmssSSS</string>


    <!--错误信息-->
    <string name="E00001">请确认您的网络已经处于正常状态！</string>
    <string name="E00002">服务器出小差了，请您稍后再试！</string>
    <string name="E00003">服务器出小差了，请您稍后再试！</string>
    <string name="DATABASE_ERROR">刚才有点走神儿，请再来一遍吧！</string>
    <string name="LOCATION_ERROR">获取地址失败,请打开定位权限或者手机的位置功能后，再次尝试！</string>
</resources>
