<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/circle_round_edge_white_10">

	<TextView
			android:layout_width="0dp"
			android:layout_height="30dp"
			android:id="@+id/dialog_title"
			android:textSize="@dimen/font_size_s2"
			android:text="@string/member_info_dialog_001"
			android:textStyle="bold"
			android:gravity="center"
			android:textColor="@color/title_color"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginTop="8dp"/>

	<View android:layout_width="260dp"
		  android:layout_height="0dp"
		  android:layout_marginTop="16dp"
		  android:background="@drawable/dialog_background"
		  app:layout_constraintTop_toBottomOf="@+id/dialog_title"
		  app:layout_constraintBottom_toTopOf="@+id/commit_button"
		  android:layout_marginBottom="16dp"
		  app:layout_constraintStart_toStartOf="parent"
		  android:layout_marginStart="20dp"
		  app:layout_constraintEnd_toEndOf="parent"
		  android:layout_marginEnd="20dp"
		  android:id="@+id/view2" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>

	<Button
			android:layout_width="90dp"
			android:layout_height="40dp"
			android:layout_marginBottom="16dp"
			android:background="@drawable/dialog_button_background"
			android:text="@string/member_info_dialog_002"
			android:textColor="@color/white"
			android:textStyle="bold"
			android:textSize="@dimen/font_size_s3"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintHorizontal_bias="0.5"
			app:layout_constraintEnd_toEndOf="parent"
			android:id="@+id/commit_button"/>

	<EditText
			android:layout_width="0dp"
			android:layout_height="47dp"
			android:inputType="textPersonName"
			android:padding="5dp"
			android:hint="@string/member_info_dialog_003"
			android:textSize="@dimen/font_size_s2"
			android:textColor="@color/title_color"
			android:maxLength="6"
			android:background="@drawable/edit_background"
			android:id="@+id/member_name"
			app:layout_constraintEnd_toEndOf="@+id/view2"
			app:layout_constraintStart_toStartOf="@+id/view2"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			app:layout_constraintHorizontal_bias="0.0"
			android:layout_marginTop="24dp"
			app:layout_constraintTop_toBottomOf="@+id/member_image"
			android:layout_marginBottom="98dp"
			app:layout_constraintBottom_toBottomOf="@+id/view2"/>

	<EditText
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:inputType="numberDecimal"
			android:paddingStart="5dp"
			android:hint="@string/member_info_dialog_004"
			android:textSize="@dimen/font_size_s2"
			android:textColor="@color/title_color"
			android:maxLength="7"
			android:background="@drawable/edit_background"
			android:id="@+id/member_money"
			app:layout_constraintEnd_toEndOf="@+id/view2"
			app:layout_constraintStart_toStartOf="@+id/view2"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			app:layout_constraintHorizontal_bias="0.0"
			android:layout_marginBottom="32dp"
			app:layout_constraintBottom_toBottomOf="@+id/view2"/>

	<TextView android:layout_width="wrap_content"
			  android:layout_height="wrap_content"
			  android:id="@+id/money_info"
			  android:textSize="@dimen/font_size_s4"
			  android:textColor="@color/title_color"
			  app:layout_constraintEnd_toEndOf="@+id/member_money"
			  app:layout_constraintBottom_toBottomOf="@+id/member_money"
			  app:layout_constraintTop_toTopOf="@+id/member_money"
			  android:layout_marginEnd="8dp"
			  android:text="@string/add_travel_010" android:layout_marginTop="16dp"/>

	<hll.zpf.starttravel.common.components.CRImageView
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:src="@mipmap/user_image3"
			android:id="@+id/member_image"
			app:radius="5dp"
			android:layout_marginTop="32dp"
			app:layout_constraintTop_toTopOf="@+id/view2"
			app:layout_constraintEnd_toEndOf="@+id/member_name"
			app:layout_constraintStart_toStartOf="@+id/member_name"/>

	<Button
			android:layout_width="25dp"
			android:layout_height="25dp"
			android:background="@drawable/close_circle_filled_button_background"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginTop="10dp"
			android:layout_marginStart="10dp"
			android:id="@+id/close_button"/>



</androidx.constraintlayout.widget.ConstraintLayout>