<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/root_view"
        android:background="@color/background_color"
        tools:context=".page.AddTravelActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/title_layout">
        <include layout="@layout/activity_title"/>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_layout"
                android:scrollbars="none"
                android:id="@+id/add_travel_scrollView"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/add_travel_003"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:textSize="@dimen/font_size_s2"
                    android:textColor="@color/title_color"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:ems="10"
                    android:maxLength="9"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/text_color"
                    android:hint="@string/add_travel_011"
                    android:textSize="@dimen/font_size_s3"
                    android:background="@drawable/circle_round_edge_white_10"
                    android:id="@+id/travel_name_editText"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"/>
            <TextView
                    android:text="@string/add_travel_004"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_s2"
                    android:textColor="@color/title_color"
                    android:id="@+id/textView21"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/travel_name_editText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:maxLength="100"
                    android:id="@+id/travel_memo_editText"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="top"
                    android:scrollbars="vertical"
                    android:textColor="@color/text_color"
                    android:hint="@string/add_travel_012"
                    android:textSize="@dimen/font_size_s3"
                    android:background="@drawable/circle_round_edge_white_10"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView21"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

            <TextView
                    android:text="@string/add_travel_005"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/travel_money_title"
                    android:textSize="@dimen/font_size_s2"
                    android:textColor="@color/title_color"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/travel_memo_editText"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
            />
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/travel_money_layout"
                    android:background="@drawable/circle_round_edge_white_10"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/travel_money_title"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp">
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number|numberDecimal"
                        android:background="@drawable/circle_round_edge_white_10"
                        android:ems="10"
                        android:hint="@string/add_travel_015"
                        android:text="0"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:gravity="right|center"
                        android:layout_marginRight="2dp"
                        android:textColor="@color/title_color"
                        android:textStyle="bold"
                        android:textSize="@dimen/font_size_s0"
                        android:id="@+id/travel_money_editText"
                        android:layout_weight="1"/>
                <TextView
                        android:text="@string/add_travel_010"
                        android:layout_width="50dp"
                        android:gravity="bottom"
                        android:paddingBottom="10dp"
                        android:layout_height="match_parent"
                        android:textColor="@color/baseColor"
                        android:textSize="@dimen/font_size_s2"
                        android:id="@+id/textView25"
                        android:layout_weight="1"/>

            </LinearLayout>
            <TextView
                    android:text="@string/add_travel_006"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_s2"
                    android:textColor="@color/title_color"
                    android:id="@+id/textView23"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/travel_money_layout"/>

            <hll.zpf.starttravel.common.components.CustomSwitchView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="16dp"
                    app:left_text="@string/add_travel_013"
                    app:right_text="@string/add_travel_014"
                    app:layout_constraintStart_toEndOf="@+id/textView23"
                    app:layout_constraintTop_toTopOf="@+id/textView23"
                    app:layout_constraintBottom_toBottomOf="@+id/textView23"
                    android:id="@+id/travel_type_switch">
            </hll.zpf.starttravel.common.components.CustomSwitchView>
            <TextView
                    android:text="@string/add_travel_007"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_size_s2"
                    android:textColor="@color/title_color"
                    android:id="@+id/travel_partner_title"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/travel_type_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/travel_partner_platform"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/circle_round_edge_white_10"
                    app:layout_constraintTop_toBottomOf="@+id/travel_partner_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="24dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/add_partner_tools"
                        android:layout_width="match_parent"
                        android:layout_height="50dp">
                    <LinearLayout android:id="@+id/add_travel_partner"
                                  android:layout_width="wrap_content"
                                  android:layout_height="match_parent"
                                  android:gravity="center"
                                  android:orientation="horizontal"
                                  app:layout_constraintTop_toTopOf="parent"
                                  app:layout_constraintStart_toStartOf="parent"
                                  android:layout_marginStart="24dp"
                                  app:layout_constraintBottom_toBottomOf="parent">
                        <Button
                                android:id="@+id/add_travel_partner_btn"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:onClick="clickAction"
                                android:background="@drawable/add_travel_partner_button_background"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:onClick="clickAction"
                                android:textColor="@color/text_color"
                                android:id="@+id/add_travel_partner_text"
                                android:text="@string/add_travel_008"
                                app:layout_constraintStart_toEndOf="@+id/add_travel_partner_btn"
                                android:layout_marginStart="5dp"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>